# OCT-MPS

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  requirements.txt  run.sh
data/input/ellipsoid_and_two_spheres/: ellipsoid_and_two_spheres_60_degree.geo  ellipsoid_and_two_spheres_60_degree.mesh  input_bias.json  input_opt.json
data/input/four_layers/: four_layers.mesh  input_bias.json  input_opt.json
data/input/small_ellipsoid/: input_opt.json  small_ellipsoid.geo  small_ellipsoid.mesh  small_ellipsoid_for_view.geo
data/input/small_sphere/: input_bias.json  input_opt.json  sphere.geo  sphere.mesh
data/input/wang_bump/: input_bias.json  input_opt.json  wang_bump.geo  wang_bump.mesh
include/: boost_utils.hpp  cuda_rng.cuh  cuda_utils.hpp  gpu_mesh.h  main.cuh  mesh.h  mesh.hpp  octmps.h  octmps_io.h  octmps_kernel.cuh  octmps_kernel.h  rng.h  simulation.h  simulation.hpp
src/c/: CMakeLists.txt  mesh.c  octmps_io.c  rng.c
src/cpp/: CMakeLists.txt  cuda_utils.cpp  mesh.cpp  octmps.cpp  simulation.cpp
src/cuda/: CMakeLists.txt  cuda_rng.cu  detect_compute_capability.sh  main.cu  octmps_kernel.cu
src/python/: mesh.py  octmps_io.py  octmps_main.py  octmps_output.py  visualize.py
test/: test_mesh.py
util/: mesh_generator.py  visualization_AScan.py  visualization_BScan.py
